# capacity-service

./: Dockerfile  LICENSE  README.md  docker-compose.yml  migrate.Dockerfile  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: db.py  exceptions.py  main.py
app/api/: capacity.py  error_handlers.py  exception_handlers.py
app/core/: logging.py  monitoring.py
app/db/: metrics.py  migrations.py  pool.py
app/middleware/: logging.py  metrics.py
app/repositories/: capacity_repository.py
app/schemas/: capacity.py
app/services/: capacity_service.py
db/: schema.sql
migrations/: 001_create_sailings_table.down.sql  001_create_sailings_table.up.sql
queries/: capacity_4w_rolling.sql
scripts/: load_sample_data.sh  migrations_up.sh  run_tests.sh
tests/: conftest.py  test_api.py  test_integration.py  test_repository.py  test_service.py
